Masha_Language/src/MASHA_Language/masha.java
/* Generated By:JavaCC: Do not edit this line. masha.java */
package MASHA_Language;

public class masha implements mashaConstants {
  public static void main(String args []) throws ParseException
  {
    masha parser = new masha(System.in);
    while (true)
    {
      System.out.println("Welcome to Masha language");
      System.out.print("-------------------------------\u005cn");
      System.out.print("Please enter an expression:");
      try
      {
        masha.start();
        System.out.println();
        System.out.println("Good Job! Your statment is Correct :) .\u005cn\u005cn");
      }
      catch (Exception e)
      {
        System.out.println();
        System.out.println("Oops.Wrong statement, Try again :( .\u005cn\u005cn");
        System.out.println(e.getMessage());
        masha.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("Oops. Not accepted statement, Try again :( .\u005cn\u005cn");
        break;
      }
    }
  }

  static final public void start() throws ParseException {
    statement();
  }

  static final public void statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC_ID:
    case VARIABLE_ID:
    case CONSTANT_ID:
    case INT:
    case FLOAT:
    case IF:
    case FUN:
    case UNTIL:
    case VAR:
    case NOT:
    case LEFT_PAR:
      if (jj_2_1(2)) {
        decleration();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
        case LEFT_PAR:
          logical_stmt();
          break;
        case IF:
          conditional_stmt();
          break;
        case STATIC_ID:
        case VARIABLE_ID:
        case CONSTANT_ID:
        case INT:
        case FLOAT:
          comparison_stmet();
          break;
        case FUN:
        case UNTIL:
          loop();
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    case LIST:
      list();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void decleration() throws ParseException {
    if (jj_2_2(2)) {
      declere_VAR();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
      case INT:
      case FLOAT:
        arithmetic_stmt();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(FULL_STOP);
  }

// used to write an arithmetic expression.
  static final public void arithmetic_stmt() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
        ID();
        break;
      case INT:
      case FLOAT:
        number();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      artimatic_operation();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
        ID();
        break;
      case INT:
      case FLOAT:
        number();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
      case INT:
      case FLOAT:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_1;
      }
    }
    System.out.println("You used an artimatic statment!");
  }

// this method used to declare a variable
  static final public void declere_VAR() throws ParseException {
    jj_consume_token(VAR);
    ID();
    jj_consume_token(ASSIGNMENT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC_ID:
    case VARIABLE_ID:
    case CONSTANT_ID:
      ID();
      break;
    case INT:
    case FLOAT:
      number();
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// work
  static final public void logical_stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_PAR:
      Binary_logical_stmt();
      break;
    case NOT:
      unary_logical_stmt();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    System.out.println("You used a logical statment!");
  }

  static final public void unary_logical_stmt() throws ParseException {
    jj_consume_token(NOT);
    jj_consume_token(LEFT_PAR);
    comparison_stmet();
    jj_consume_token(RIGHT_PAR);
  }

  static final public void Binary_logical_stmt() throws ParseException {
    jj_consume_token(LEFT_PAR);
    comparison_stmet();
    jj_consume_token(RIGHT_PAR);
    logical_operation();
    jj_consume_token(LEFT_PAR);
    comparison_stmet();
    jj_consume_token(RIGHT_PAR);
  }

  static final public void conditional_stmt() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LEFT_PAR);
    comparison_stmet();
    jj_consume_token(RIGHT_PAR);
    jj_consume_token(COLON);
    jj_consume_token(LEFT_SQR_BRACKT);
    label_2:
    while (true) {
      statement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
      case INT:
      case FLOAT:
      case IF:
      case FUN:
      case UNTIL:
      case VAR:
      case LIST:
      case NOT:
      case LEFT_PAR:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(RIGHT_SQR_BRACKT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      else_stmt();
      break;
    case FULL_STOP:
      jj_consume_token(FULL_STOP);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    System.out.println("You used a conditional statment!");
  }

  static final public void else_stmt() throws ParseException {
    jj_consume_token(ELSE);
    jj_consume_token(LEFT_SQR_BRACKT);
    label_3:
    while (true) {
      statement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
      case INT:
      case FLOAT:
      case IF:
      case FUN:
      case UNTIL:
      case VAR:
      case LIST:
      case NOT:
      case LEFT_PAR:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
    }
    jj_consume_token(RIGHT_SQR_BRACKT);
  }

// work
  static final public void comparison_stmet() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC_ID:
    case VARIABLE_ID:
    case CONSTANT_ID:
      ID();
      break;
    case INT:
    case FLOAT:
      number();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    comparison_operation();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC_ID:
    case VARIABLE_ID:
    case CONSTANT_ID:
      ID();
      break;
    case INT:
    case FLOAT:
      number();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    System.out.println("You used a comparison statment!");
  }

// used to create a loop
  static final public void loop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNTIL:
      until();
      break;
    case FUN:
      fun();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    System.out.println("You used an Iterative statement!");
  }

  static final public void until() throws ParseException {
    jj_consume_token(UNTIL);
    jj_consume_token(LEFT_PAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC_ID:
    case VARIABLE_ID:
    case CONSTANT_ID:
    case INT:
    case FLOAT:
      comparison_stmet();
      break;
    case NOT:
    case LEFT_PAR:
      logical_stmt();
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RIGHT_PAR);
    jj_consume_token(COLON);
    jj_consume_token(LEFT_SQR_BRACKT);
    label_4:
    while (true) {
      statement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
      case INT:
      case FLOAT:
      case IF:
      case FUN:
      case UNTIL:
      case VAR:
      case LIST:
      case NOT:
      case LEFT_PAR:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(RIGHT_SQR_BRACKT);
  }

  static final public void fun() throws ParseException {
    jj_consume_token(FUN);
    jj_consume_token(LEFT_PAR);
    jj_consume_token(INT);
    jj_consume_token(COLON);
    jj_consume_token(INT);
    jj_consume_token(COLON);
    jj_consume_token(INT);
    jj_consume_token(RIGHT_PAR);
    jj_consume_token(COLON);
    jj_consume_token(LEFT_SQR_BRACKT);
    label_5:
    while (true) {
      statement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
      case INT:
      case FLOAT:
      case IF:
      case FUN:
      case UNTIL:
      case VAR:
      case LIST:
      case NOT:
      case LEFT_PAR:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
    }
    jj_consume_token(RIGHT_SQR_BRACKT);
    System.out.println("You used a function!");
  }

  static final public void list() throws ParseException {
    jj_consume_token(LIST);
    ID();
    jj_consume_token(ASSIGNMENT);
    jj_consume_token(LEFT_SQR_BRACKT);
    jj_consume_token(LIST_ELEMENTS);
    jj_consume_token(RIGHT_SQR_BRACKT);
    jj_consume_token(FULL_STOP);
    System.out.println("You used a list!");
  }

  static final public void ID() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC_ID:
      jj_consume_token(STATIC_ID);
      break;
    case VARIABLE_ID:
      jj_consume_token(VARIABLE_ID);
      break;
    case CONSTANT_ID:
      jj_consume_token(CONSTANT_ID);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void number() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void artimatic_operation() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
      break;
    case MINUS:
      jj_consume_token(MINUS);
      break;
    case MULTIPLY:
      jj_consume_token(MULTIPLY);
      break;
    case DIVIDE:
      jj_consume_token(DIVIDE);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void logical_operation() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      break;
    case OR:
      jj_consume_token(OR);
      break;
    case XOR:
      jj_consume_token(XOR);
      break;
    case NOT:
      jj_consume_token(NOT);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void comparison_operation() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUAL:
      jj_consume_token(EQUAL);
      break;
    case INEQUAL:
      jj_consume_token(INEQUAL);
      break;
    case LESS_THAN:
      jj_consume_token(LESS_THAN);
      break;
    case LESS_OR_EQUAL:
      jj_consume_token(LESS_OR_EQUAL);
      break;
    case GREAT_THAN:
      jj_consume_token(GREAT_THAN);
      break;
    case GREAT_OR_EQUAL:
      jj_consume_token(GREAT_OR_EQUAL);
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_12()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) return true;
    }
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    Token xsp;
    if (jj_3R_11()) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_11()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3R_7() {
    if (jj_scan_token(VAR)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(5)) {
    jj_scanpos = xsp;
    if (jj_scan_token(6)) {
    jj_scanpos = xsp;
    if (jj_scan_token(7)) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(21)) {
    jj_scanpos = xsp;
    if (jj_scan_token(22)) {
    jj_scanpos = xsp;
    if (jj_scan_token(23)) {
    jj_scanpos = xsp;
    if (jj_scan_token(24)) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_8() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3R_8()) return true;
    }
    return false;
  }

  static private boolean jj_3R_15() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(8)) {
    jj_scanpos = xsp;
    if (jj_scan_token(9)) return true;
    }
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public mashaTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[22];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x683e0,0x1e83e0,0x3e0,0x3e0,0x3e0,0x3e0,0x7e0,0x0,0x1e83e0,0x10000,0x1e83e0,0x3e0,0x3e0,0x60000,0x3e0,0x1e83e0,0x1e83e0,0xe0,0x300,0x1e00000,0x0,0xfc000000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x18,0x18,0x0,0x0,0x0,0x0,0x0,0x18,0x18,0x400,0x18,0x0,0x0,0x0,0x18,0x18,0x18,0x0,0x0,0x0,0xf,0x0,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[2];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public masha(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public masha(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new mashaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 22; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 22; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public masha(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new mashaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 22; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 22; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public masha(mashaTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 22; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(mashaTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 22; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  static private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
  static private int[] jj_lasttokens = new int[100];
  static private int jj_endpos;

  static private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[45];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 22; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 45; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
